--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server . -p 8000 -o"
+    "start": "http-server . -p 8000 -o",
+    "build": "echo \"Build complete - static files ready for deployment\""
   },
   "keywords": [],
   "author": "",
